--- a/package.json
+++ b/package.json
@@ -6,20 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx",
+    "prebuild": "cross-env NODE_ENV=production ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.2",
+    "@ant-design/static-style-extract": "^1.0.2",
+    "@antv/g2": "^5.1.1",
+    "@eagle-tracker/core": "^2.1.1",
+    "@eagle-tracker/types": "^2.1.0",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.9.3",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
+    "less": "^4.2.0",
     "next": "13.4.19",
+    "next-plugin-antd": "^0.2.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.6.2",
     "typescript": "5.2.2"
   }
 }
