--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/static-style-extract": "^1.0.2",
     "@antv/g2": "^5.1.1",
-    "@eagle-tracker/core": "^2.1.1",
+    "@eagle-tracker/core": "^2.1.2",
     "@eagle-tracker/types": "^2.1.0",
     "@types/js-cookie": "^3.0.4",
     "@types/node": "20.6.0",
@@ -24,7 +24,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.49.0",
+    "eslint": "^8.54.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
     "less": "^4.2.0",
@@ -33,6 +33,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-json-view": "^1.21.3",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
