--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "eslint": "^8.54.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
